feat: add portfolio-detail, blog, blog-detail

--- a/test/blog-detail.html
+++ b/test/blog-detail.html
@@ -130,293 +130,132 @@
         <div class="breadcrumbs__wrap">
           <a href="index.html" class="breadcrumbs__link">Главная</a>
           |
-          <span class="breadcrumbs__current">Портфолио</span>
+          <a href="blog.html" class="breadcrumbs__link">Блог</a>
+          |
+          <span class="breadcrumbs__current">Детальная страница блога</span>
         </div>
       </div>
     </div>
     <section class="page-content">
       <div class="container">
-        <h1 class="page-title">Портфолио</h1>
-        <div class="page-content__content">
-          <div class="row">
-            <div class="col-12 col-sm-6 col-lg-4">
-              <a href="portfolio-detail.html" class="card-slider">
-                <div class="card-slider__wrap">
-                  <img
-                    class="card-slider__img active"
-                    src="./img/portfolio/1.jpg"
-                    alt=""
-                  />
-                  <img
-                    class="card-slider__img"
-                    src="./img/portfolio/3.jpg"
-                    alt=""
-                  />
-                  <div class="card-slider__section">
-                    <div class="img-first">
-                      <div class="card-slider__line active"></div>
-                    </div>
-                    <div class="img-second">
-                      <div class="card-slider__line"></div>
-                    </div>
-                  </div>
-                </div>
-                <div class="card-slider__info">
-                  <h2 class="card-title">Перетяжка дивана</h2>
-                  <p class="card-descr">
-                    Lorem Ipsum is simply dummy text of the printing and
-                    typesetting industry. Lorem Ipsum has be...
-                  </p>
-                </div>
-              </a>
-            </div>
-            <div class="col-12 col-sm-6 col-lg-4">
-              <a href="portfolio-detail.html" class="card-slider">
-                <div class="card-slider__wrap">
-                  <img
-                    class="card-slider__img active"
-                    src="./img/portfolio/4.jpg"
-                    alt=""
-                  />
-                  <img
-                    class="card-slider__img"
-                    src="./img/portfolio/4.4.jpg"
-                    alt=""
-                  />
-                  <div class="card-slider__section">
-                    <div class="img-first">
-                      <div class="card-slider__line active"></div>
-                    </div>
-                    <div class="img-second">
-                      <div class="card-slider__line"></div>
-                    </div>
-                  </div>
-                </div>
-                <div class="card-slider__info">
-                  <h2 class="card-title">Перетяжка дивана</h2>
-                  <p class="card-descr">
-                    Lorem Ipsum is simply dummy text of the printing and
-                    typesetting industry. Lorem Ipsum has be...
-                  </p>
-                </div>
-              </a>
-            </div>
-            <div class="col-12 col-sm-6 col-lg-4">
-              <a href="portfolio-detail.html" class="card-slider">
-                <div class="card-slider__wrap">
-                  <img
-                    class="card-slider__img active"
-                    src="./img/portfolio/5.jpg"
-                    alt=""
-                  />
-                  <img
-                    class="card-slider__img"
-                    src="./img/portfolio/6.jpg"
-                    alt=""
-                  />
-                  <div class="card-slider__section">
-                    <div class="img-first">
-                      <div class="card-slider__line active"></div>
-                    </div>
-                    <div class="img-second">
-                      <div class="card-slider__line"></div>
-                    </div>
-                  </div>
-                </div>
-                <div class="card-slider__info">
-                  <h2 class="card-title">Перетяжка дивана</h2>
-                  <p class="card-descr">
-                    Lorem Ipsum is simply dummy text of the printing and
-                    typesetting industry. Lorem Ipsum has be...
-                  </p>
-                </div>
-              </a>
-            </div>
-            <div class="col-12 col-sm-6 col-lg-4">
-              <a href="portfolio-detail.html" class="card-slider">
-                <div class="card-slider__wrap">
-                  <img
-                    class="card-slider__img active"
-                    src="./img/portfolio/7.jpg"
-                    alt=""
-                  />
-                  <img
-                    class="card-slider__img"
-                    src="./img/portfolio/8.jpg"
-                    alt=""
-                  />
-                  <div class="card-slider__section">
-                    <div class="img-first">
-                      <div class="card-slider__line active"></div>
-                    </div>
-                    <div class="img-second">
-                      <div class="card-slider__line"></div>
-                    </div>
-                  </div>
-                </div>
-                <div class="card-slider__info">
-                  <h2 class="card-title">Перетяжка дивана</h2>
-                  <p class="card-descr">
-                    Lorem Ipsum is simply dummy text of the printing and
-                    typesetting industry. Lorem Ipsum has be...
-                  </p>
-                </div>
-              </a>
-            </div>
-            <div class="col-12 col-sm-6 col-lg-4">
-              <a href="portfolio-detail.html" class="card-slider">
-                <div class="card-slider__wrap">
-                  <img
-                    class="card-slider__img active"
-                    src="./img/portfolio/9.jpg"
-                    alt=""
-                  />
-                  <img
-                    class="card-slider__img"
-                    src="./img/portfolio/10.jpg"
-                    alt=""
-                  />
-                  <div class="card-slider__section">
-                    <div class="img-first">
-                      <div class="card-slider__line active"></div>
-                    </div>
-                    <div class="img-second">
-                      <div class="card-slider__line"></div>
-                    </div>
-                  </div>
-                </div>
-                <div class="card-slider__info">
-                  <h2 class="card-title">Перетяжка дивана</h2>
-                  <p class="card-descr">
-                    Lorem Ipsum is simply dummy text of the printing and
-                    typesetting industry. Lorem Ipsum has be...
-                  </p>
-                </div>
-              </a>
-            </div>
-            <div class="col-12 col-sm-6 col-lg-4">
-              <a href="portfolio-detail.html" class="card-slider">
-                <div class="card-slider__wrap">
-                  <img
-                    class="card-slider__img active"
-                    src="./img/portfolio/4.jpg"
-                    alt=""
-                  />
-                  <img
-                    class="card-slider__img"
-                    src="./img/portfolio/4.4.jpg"
-                    alt=""
-                  />
-                  <div class="card-slider__section">
-                    <div class="img-first">
-                      <div class="card-slider__line active"></div>
-                    </div>
-                    <div class="img-second">
-                      <div class="card-slider__line"></div>
-                    </div>
-                  </div>
-                </div>
-                <div class="card-slider__info">
-                  <h2 class="card-title">Перетяжка дивана</h2>
-                  <p class="card-descr">
-                    Lorem Ipsum is simply dummy text of the printing and
-                    typesetting industry. Lorem Ipsum has be...
-                  </p>
-                </div>
-              </a>
-            </div>
-            <div class="col-12 col-sm-6 col-lg-4">
-              <a href="portfolio-detail.html" class="card-slider">
-                <div class="card-slider__wrap">
-                  <img
-                    class="card-slider__img active"
-                    src="./img/portfolio/5.jpg"
-                    alt=""
-                  />
-                  <img
-                    class="card-slider__img"
-                    src="./img/portfolio/6.jpg"
-                    alt=""
-                  />
-                  <div class="card-slider__section">
-                    <div class="img-first">
-                      <div class="card-slider__line active"></div>
-                    </div>
-                    <div class="img-second">
-                      <div class="card-slider__line"></div>
-                    </div>
-                  </div>
-                </div>
-                <div class="card-slider__info">
-                  <h2 class="card-title">Перетяжка дивана</h2>
-                  <p class="card-descr">
-                    Lorem Ipsum is simply dummy text of the printing and
-                    typesetting industry. Lorem Ipsum has be...
-                  </p>
-                </div>
-              </a>
-            </div>
-            <div class="col-12 col-sm-6 col-lg-4">
-              <a href="portfolio-detail.html" class="card-slider">
-                <div class="card-slider__wrap">
-                  <img
-                    class="card-slider__img active"
-                    src="./img/portfolio/7.jpg"
-                    alt=""
-                  />
-                  <img
-                    class="card-slider__img"
-                    src="./img/portfolio/8.jpg"
-                    alt=""
-                  />
-                  <div class="card-slider__section">
-                    <div class="img-first">
-                      <div class="card-slider__line active"></div>
-                    </div>
-                    <div class="img-second">
-                      <div class="card-slider__line"></div>
-                    </div>
-                  </div>
-                </div>
-                <div class="card-slider__info">
-                  <h2 class="card-title">Перетяжка дивана</h2>
-                  <p class="card-descr">
-                    Lorem Ipsum is simply dummy text of the printing and
-                    typesetting industry. Lorem Ipsum has be...
-                  </p>
-                </div>
-              </a>
-            </div>
-            <div class="col-12 col-sm-6 col-lg-4">
-              <a href="portfolio-detail.html" class="card-slider">
-                <div class="card-slider__wrap">
-                  <img
-                    class="card-slider__img active"
-                    src="./img/portfolio/9.jpg"
-                    alt=""
-                  />
-                  <img
-                    class="card-slider__img"
-                    src="./img/portfolio/10.jpg"
-                    alt=""
-                  />
-                  <div class="card-slider__section">
-                    <div class="img-first">
-                      <div class="card-slider__line active"></div>
-                    </div>
-                    <div class="img-second">
-                      <div class="card-slider__line"></div>
-                    </div>
-                  </div>
-                </div>
-                <div class="card-slider__info">
-                  <h2 class="card-title">Перетяжка дивана</h2>
-                  <p class="card-descr">
-                    Lorem Ipsum is simply dummy text of the printing and
-                    typesetting industry. Lorem Ipsum has be...
-                  </p>
-                </div>
-              </a>
+        <div class="page-content-small">
+          <h1 class="page-title">Детальная страница блога</h1>
+          <div class="page-content__content">
+            <div class="page-date">13.03.2024</div>
+            <div class="page-text">
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab
+                laborum praesentium fugiat modi. Sit temporibus quae.
+              </p>
+              <div class="page-img page-img_small mb-3">
+                <img src="./img/portfolio/6.jpg" alt="" />
+              </div>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Voluptate in aliquam, quas neque veritatis animi repudiandae
+                dignissimos itaque dolorum maxime molestiae dicta, magni quos
+                ipsa harum blanditiis velit enim et. Culpa ipsam facilis optio,
+                id harum blanditiis qui odit, excepturi eius porro est in ipsum
+                nobis veritatis temporibus autem, mollitia quos natus. Saepe
+                molestiae laborum vitae. Amet eum inventore illo!
+              </p>
+
+              <h2>Lorem ipsum dolor</h2>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Voluptate in aliquam, quas neque veritatis animi repudiandae
+                dignissimos itaque dolorum maxime molestiae dicta, magni quos
+                ipsa harum blanditiis velit enim et. Culpa ipsam facilis optio,
+                id harum blanditiis qui odit, excepturi eius porro est in ipsum
+                nobis veritatis temporibus autem, mollitia quos natus. Saepe
+                molestiae laborum vitae. Amet eum inventore illo!
+              </p>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Voluptate in aliquam, quas neque veritatis animi repudiandae
+                dignissimos itaque dolorum maxime molestiae dicta, magni quos
+                ipsa harum blanditiis velit enim et. Culpa ipsam facilis optio,
+                id harum blanditiis qui odit, excepturi eius porro est in ipsum
+                nobis veritatis temporibus autem, mollitia quos natus. Saepe
+                molestiae laborum vitae. Amet eum inventore illo!
+              </p>
+
+              <h2>Voluptate in aliquam</h2>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae
+                enim alias facilis quidem provident aspernatur sit ea
+                accusantium minus, dignissimos nesciunt et ab facere. Vel
+                necessitatibus fugit quisquam commodi eaque.
+              </p>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Asperiores quasi exercitationem culpa temporibus provident in.
+                Cumque repudiandae soluta aut sunt voluptas, tenetur accusamus,
+                reiciendis commodi sequi a consequatur culpa veniam! Suscipit
+                expedita error velit non sed autem nam molestiae quibusdam nemo
+                aspernatur provident explicabo et quidem, iure modi id quisquam
+                perferendis veniam necessitatibus? Eaque, perferendis placeat
+                repudiandae eveniet sapiente facilis. Pariatur distinctio itaque
+                facere modi repellat sequi quos nihil? Sed reiciendis officiis
+                porro sunt id aspernatur perspiciatis qui, deleniti ratione illo
+                iste consequatur libero dolorem maxime, accusantium ipsum
+                architecto ad?
+              </p>
+
+              <h3>Маркированный список</h3>
+
+              <ul>
+                <li>repudiandae eveniet sapiente f</li>
+                <li>e consequatur libero</li>
+                <li>acere modi repell</li>
+                <li>
+                  spernatur provident LoremLorem ipsum dolor sit amet,
+                  consectetur adipisicing elit. Dolores velit quod labore quos
+                  earum debitis. Inventore il
+                </li>
+                <li>res quasi exercitatio</li>
+              </ul>
+
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Dolores velit quod labore quos earum debitis. Inventore illo
+                ullam, excepturi, quaerat debitis animi provident unde quasi
+                dolorem nihil asperiores pariatur quas?
+              </p>
+
+              <h3>Нумерованный список</h3>
+
+              <ol>
+                <li>repudiandae eveniet sapiente f</li>
+                <li>e consequatur libero</li>
+                <li>
+                  acere modi repell Lorem ipsum dolor sit amet, consectetur
+                  adipisicing elit. Dolores velit quod labore quos earum de
+                </li>
+                <li>spernatur provident</li>
+                <li>res quasi exercitatio</li>
+              </ol>
+              <h2>Lorem ipsum dolor</h2>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Voluptate in aliquam, quas neque veritatis animi repudiandae
+                dignissimos itaque dolorum maxime molestiae dicta, magni quos
+                ipsa harum blanditiis velit enim et. Culpa ipsam facilis optio,
+                id harum blanditiis qui odit, excepturi eius porro est in ipsum
+                nobis veritatis temporibus autem, mollitia quos natus. Saepe
+                molestiae laborum vitae. Amet eum inventore illo!
+              </p>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Voluptate in aliquam, quas neque veritatis animi repudiandae
+                dignissimos itaque dolorum maxime molestiae dicta, magni quos
+                ipsa harum blanditiis velit enim et. Culpa ipsam facilis optio,
+                id harum blanditiis qui odit, excepturi eius porro est in ipsum
+                nobis veritatis temporibus autem, mollitia quos natus. Saepe
+                molestiae laborum vitae. Amet eum inventore illo!
+              </p>
+
+              <a href="#" class="button-link"> Кнопка для перехода </a>
             </div>
           </div>
         </div>
