--- a/test/index.html
+++ b/test/index.html
@@ -21,10 +21,12 @@
             <nav>
               <ul class="header__list">
                 <li class="header__list-elem">
-                  <a class="header__list-link" href="#">Наши работы</a>
+                  <a class="header__list-link" href="portfolio.html"
+                    >Наши работы</a
+                  >
                 </li>
                 <li class="header__list-elem">
-                  <a class="header__list-link" href="#">Блог</a>
+                  <a class="header__list-link" href="blog.html">Блог</a>
                 </li>
                 <li class="header__list-elem">
                   <a class="header__list-link" href="#">Контакты</a>
